new' git push --all

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,7 @@
 video, canvas {
     --width: 45%;
     width: var(--width);
-    height: calc(var(--width) * 0.75);
+    /* height: calc(var(--width) * 0.75); */
     margin: 0 0 20px 0;
     vertical-align: top;
   }
@@ -29,3 +29,23 @@ video, canvas {
     transform: scaleX(-1);
   }
   
+
+  #cursor {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border: 1px solid black;
+    border-radius: 50%;
+    pointer-events: none;
+    transition: ease .2s;
+  }
+
+  #canvasContainer {
+    position: relative;
+  }
+  
+  #canvasContainer canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
